proxies/envoy.receiver.yml
static_resources:
  listeners:
  - name: proxy_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: app
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: my-receiver
          http_filters:
          - name: envoy.filters.http.secure_proxy
            typed_config:
              "@type": type.googleapis.com/secureproxy.Config
              token: "{YOUR_QRYPT_TOKEN}" 
              role: RECEIVER
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: my-receiver
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: my-receiver
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  protocol: TCP
                  address: recipient
                  port_value: 3000
