proxies/envoy.sender.yml
static_resources:
  listeners:
  - name: proxy_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: app
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  host_rewrite_literal: "sender-proxy"
                  cluster: my-envoy
                  request_mirror_policies:
                    - cluster: eavesdropper 
                      runtime_fraction:
                        default_value:
                          numerator: 100
          http_filters:
          - name: envoy.filters.http.secure_proxy
            typed_config:
              "@type": type.googleapis.com/secureproxy.Config
              token: "eyJhbGciOiJFUzI1NiIsInR5cCI6IkpXVCIsImtpZCI6IjhlNDQ3NTE5NjE3OTQ1MWFiMmUxZjhlOGJlYjk0ZjY3In0.eyJleHAiOjE3MTA3NjE5MjQsIm5iZiI6MTY3OTIyNTkyNCwiaXNzIjoiQVVUSCIsImlhdCI6MTY3OTIyNTkyNCwiZ3JwcyI6WyJQVUIiXSwiYXVkIjpbIlJQUyIsIlFERUEiXSwicmxzIjpbIlJORFVTUiIsIlFERVVTUiJdLCJjaWQiOiJOekRiaGRTZmduZVRSa3BndTEtMEYiLCJkdmMiOiJhMGFhZWRlMGJkNjQ0YzIzYmVkM2RiMzFjOTg0ZWY1YSIsImp0aSI6IjQ5Njg2M2IwMjgzZjQ0Yzk5YzdmNjI2ODA4MjEwNTljIiwidHlwIjozfQ.9fnP_zGwx5viOPXUE4X42_tzXfCErEhs-TZYBKJ0Eb3QUsYXd6NHS4J [...]
              role: SENDER
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: my-envoy
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: my-envoy
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  protocol: TCP
                  address: receiver-proxy 
                  port_value: 80
    - name: eavesdropper
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: eavesdropper
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  protocol: TCP
                  address: eavesdropper
                  port_value: 3000
